# npm-activity-check

./: Cargo.toml  LICENSE  README.md  config.sample.toml
src/: config.rs  history.rs  main.rs  npm.rs  output.rs  scoring.rs  types.rs
