[package]
name = "npm-activity-check"
version = "0.1.0"
edition = "2021"
description = "CLI tool to check if NPM packages are actively maintained. Analyzes versions, downloads, and recent activity to determine package health."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
